# UTAU_Recorder

./: .gitignore  LICENSE  README.md  main.py  reclist.txt  requirements.txt
app/: main_window.py  voicebank_config_dialog.py  vst_batch.py
audio/: dsp.py  engine.py  ring_buffer.py
models/: parsers.py  romaji.py  session.py  voicebank.py
storage/: session_io.py
tests/: test_parsers.py
vst_host/: CMakeLists.txt  README.txt
vst_host/src/: gui_main.cpp  main.cpp
